Drop in PCB+GL code + various mess. Needs splitting up?
Credits:

  Algorithm to calculate number of segments to use in circular
  curve approximation suggested by DJ Delorie.

  Thanks to Krzysztof Kościuszkiewicz for debugging an issue where
  I falied to disable the GL_SCISSOR_TEST before clearing buffers.
    edit: Not sure about this - did it turn out to be something else?

FIXME: SHOULD NOT RE-WRITE THE GTK HID!

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -157,12 +157,22 @@ PCB_SRCS = \
 	hid/common/hid_resource.h \
 	hid/hidint.h 
 
-EXTRA_pcb_SOURCES = ${DBUS_SRCS} toporouter.c toporouter.h
+EXTRA_pcb_SOURCES = ${DBUS_SRCS} ${GL_SRCS} toporouter.c toporouter.h
 DBUS_SRCS= \
 	dbus-pcbmain.c \
 	dbus-pcbmain.h \
 	dbus.h \
 	dbus.c
+
+LIBGTK_GDK_SRCS= \
+	hid/gtk/gtkhid-gdk.c
+
+LIBGTK_GL_SRCS= \
+	hid/gtk/gtkhid-gl.c
+
+GL_SRCS= \
+	hid/common/hidgl.c \
+	hid/common/hidgl.h
 
 BUILT_SOURCES = \
 	core_lists.h \
@@ -250,7 +260,6 @@ LIBGTK_SRCS = \
 	dolists.h \
 	hid/hidint.h \
 	hid/gtk/gtkhid-main.c \
-	hid/gtk/gtkhid-gdk.c \
 	hid/gtk/gtkhid.h \
 	hid/gtk/gui.h \
 	hid/gtk/gui-command-window.c \
@@ -292,6 +301,14 @@ dbus-introspect.h : dbus.xml Makefile
 PCB_SRCS+=	${DBUS_SRCS}
 BUILT_SOURCES+=	dbus-introspect.h
 
+endif
+
+# If we are building with GL support, we need some extra files
+if USE_GL
+PCB_SRCS+=	${GL_SRCS}
+LIBGTK_SRCS+=	${LIBGTK_GL_SRCS}
+else
+LIBGTK_SRCS+=	${LIBGTK_GDK_SRCS}
 endif
 
 # If we are building on win32, then compile in some icons for the
