--- a/tests/golden/hid_gerber1/Makefile.am
+++ b/tests/golden/hid_gerber1/Makefile.am
@@ -1,7 +1,7 @@
 ## -*- makefile -*-
 
 EXTRA_DIST= \
-	gerber_oneline.back.gbr \
+	gerber_oneline.bottom.gbr \
 	gerber_oneline.fab.gbr \
-	gerber_oneline.front.gbr \
+	gerber_oneline.top.gbr \
 	gerber_oneline.plated-drill.cnc
