--- a/tests/golden/hid_gcode11/Makefile.am
+++ b/tests/golden/hid_gcode11/Makefile.am
@@ -1,6 +1,6 @@
 ## -*- makefile -*-
 
 EXTRA_DIST= \
-	gcode_oneline.gcode.back.cnc \
+	gcode_oneline.gcode.bottom.cnc \
 	gcode_oneline.gcode.drill.cnc \
-	gcode_oneline.gcode.front.cnc
+	gcode_oneline.gcode.top.cnc
