--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -195,7 +195,15 @@ LIBGTK_GL_SRCS= \
 	hid/gtk/quad.c \
 	hid/gtk/quad.h \
 	hid/gtk/quad_test.c \
-	hid/gtk/quad_test.h
+	hid/gtk/quad_test.h \
+	hid/gtk/vertex3d.c \
+	hid/gtk/vertex3d.h \
+	hid/gtk/face3d.c \
+	hid/gtk/face3d.h \
+	hid/gtk/edge3d.c \
+	hid/gtk/edge3d.h \
+	hid/gtk/object3d.c \
+	hid/gtk/object3d.h
 
 GL_SRCS= \
 	hid/common/hidgl.c \
